--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginTop="@dimen/margin_top"
+            app:layout_constraintVertical_bias="@dimen/vertical_bias"
     />
     <Button
             android:id="@+id/login"
@@ -28,8 +28,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginTop="@dimen/margin_top"
+            app:layout_constraintVertical_bias="@dimen/vertical_bias"
     />
 
 </android.support.constraint.ConstraintLayout>
